# ogre-2.1-release

./: .gitignore  BUILD.bazel  RELEASING.md  ogre-2.1_2.0.9999~20180616~06a386f.orig.tar.bz2.delta  ogre-2.1_2.0.9999~20180616~06a386f.orig.tar.bz2.id  packages.apt
Components/: BUILD.bazel
OgreMain/include/: OgreMemorySTLAllocator.h  OgreRenderSystem.h
OgreMain/src/: OgreRoot.cpp
RenderSystems/GL3Plus/include/windowing/OSX/: OgreOSXCocoaWindow.h
RenderSystems/GL3Plus/src/windowing/OSX/: OgreOSXCocoaWindow.mm
RenderSystems/GL3Plus/src/windowing/win32/: OgreWin32Window.cpp
RenderSystems/GLES2/src/EAGL/: OgreEAGL2Window.mm
RenderSystems/GLES2/src/NaCl/: OgreNaClWindow.cpp
RenderSystems/Metal/src/: OgreMetalRenderWindow.mm
Samples/2.0/Common/src/: GraphicsSystem.cpp
debian/: .control.swp  .rules.swo  blender-ogrexml-2.1.install  changelog  control  copyright  debhelper-build-stamp  gbp.conf  libogre-2.1-dev.install  libogre-2.1.install  not-installed  ogre-2.1-doc.docs  ogre-2.1-doc.install  ogre-2.1-doc.links  ogre-2.1-tools.install  ogre-2.1-tools.manpages  rules
debian/patches/: riscv64-support.patch  series
