cc_library(
    name = "hlms_pbs_inc",
    hdrs = glob(
        [
            "Hlms/Pbs/src/*.inc",
        ],
    ),
)

cc_library(
    name = "hlms_common",
    srcs = glob(
        [
            "Hlms/Common/src/*.cpp",
            "Hlms/Common/include/*.h",
        ],
    ),
    hdrs = glob(
        [
            "Hlms/Common/include/*.h",
        ],
    ),
    include_prefix = "Hlms/Common/",
    includes = [
        "Hlms/Common/include",
    ],
    strip_include_prefix = "Hlms/Common/include",
    visibility = ["//visibility:public"],
    deps = [
        "//ogre2:ogre_main",
    ],
    alwayslink = 1,
)

cc_library(
    name = "hlms_pbs",
    srcs = glob(
        [
            "Hlms/Pbs/src/*.cpp",
            "Hlms/Pbs/src/Cubemaps/*.cpp",
            "Hlms/Pbs/src/InstantRadiosity/*.cpp",
            "Hlms/Pbs/include/*.h",
            "Hlms/Pbs/include/Cubemaps/*.h",
            "Hlms/Pbs/include/InstantRadiosity/*.h",
        ],
    ),
    hdrs = glob(
        [
            "Hlms/Pbs/include/*.h",
        ],
    ),
    include_prefix = "Hlms/Pbs",
    includes = [
        "Hlms/Pbs/include",
    ],
    strip_include_prefix = "Hlms/Pbs/include",
    visibility = ["//visibility:public"],
    deps = [
        ":hlms_common",
        ":hlms_pbs_inc",
        "//ogre2:ogre_main",
    ],
    alwayslink = 1,
)

cc_library(
    name = "hlms_pbs_mobile",
    srcs = glob(
        [
            "Hlms/PbsMobile/src/*.cpp",
        ],
    ),
    hdrs = glob(
        [
            "Hlms/PbsMobile/include/*.h",
        ],
    ),
    includes = [
        "Hlms/PbsMobile/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":hlms_common",
        "//ogre2:ogre_main",
    ],
    alwayslink = 1,
)

cc_library(
    name = "hlms_unlit_inc",
    hdrs = glob(
        [
            "Hlms/Unlit/src/*.inc",
        ],
    ),
)

cc_library(
    name = "hlms_unlit",
    srcs = glob(
        [
            "Hlms/Unlit/src/*.cpp",
            "Hlms/Unlit/include/*.h",
        ],
    ),
    hdrs = glob(
        [
            "Hlms/Unlit/include/*.h",
        ],
    ),
    include_prefix = "Hlms/Unlit",
    includes = [
        "Hlms/Unlit/include",
    ],
    strip_include_prefix = "Hlms/Unlit/include",
    visibility = ["//visibility:public"],
    deps = [
        ":hlms_common",
        ":hlms_unlit_inc",
        "//ogre2:ogre_main",
    ],
    alwayslink = 1,
)

cc_library(
    name = "hlms_unlit_mobile",
    srcs = glob(
        [
            "Hlms/UnlitMobile/src/*.cpp",
        ],
    ),
    hdrs = glob(
        [
            "Hlms/UnlitMobile/include/*.h",
        ],
    ),
    includes = [
        "Hlms/UnlitMobile/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":hlms_common",
        "//ogre2:ogre_main",
    ],
    alwayslink = 1,
)

cc_library(
    name = "overlay",
    srcs = glob(
        [
            "Overlay/src/*.cpp",
            "Overlay/include/*.h",
        ],
    ),
    hdrs = glob(
        [
            "Overlay/include/*.h",
        ],
    ),
    include_prefix = "Overlay",
    includes = [
        "Overlay/include",
    ],
    strip_include_prefix = "Overlay/include",
    visibility = ["//visibility:public"],
    deps = [
        ":hlms_unlit",
        "//ogre2:ogre_main",
        "@freetype2",
    ],
    alwayslink = 1,
)
